# RAG_project

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
src/: __init__.py  agent.py  config.py  document_loader.py  embedder.py  knowledge_base.py  memory.py  reranker.py  tools.py  vector_store.py
tests/: __init__.py  conftest.py  test_document_loader.py  test_embedder.py  test_integration.py  test_knowledge_base.py
